--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -49,7 +49,7 @@
             <div class="content">
                 <div>
                     <h3>Frontend</h3>
-                    <p>HTML5 CSS3 JavaScript Sass ES6 jQuery Vue.js Gatsby Handlebars Backbone.js D3.js PWA</p>
+                    <p>HTML5 CSS3 JavaScript Sass ES6 jQuery Vue.js Handlebars Backbone.js D3.js Gatsby</p>
                 </div>
                 <div>
                     <h3>Backend</h3>
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <h3 data-t>home.other</h3>
-                    <p>Git Jamstack a11y WordPress Webpack OOP SEO</p>
+                    <p>Git Jamstack a11y WordPress Webpack OOP SEO PWA</p>
                 </div>
                 <div>
                     <h3>Soft skills</h3>
