--- a/src/html/projects/cookpool.hbs
+++ b/src/html/projects/cookpool.hbs
@@ -26,6 +26,10 @@
                 <img src="../img/cookpool_4.jpg" alt="Cookpool screenshot" class="screenshot">
                 <img src="../img/cookpool_2.jpg" alt="Cookpool screenshot" class="screenshot small">
             </div>
+            <h2><span class="tilted_bg"><span class="bg" data-t>Challenges</span></span></h2>
+            <p data-t>cookpool.challenges</p>
+            <h2><span class="tilted_bg"><span class="bg" data-t>projects.RoomForImprovement</span></span></h2>
+            <p data-t>cookpool.impr</p>
         </section>
     </div>
     <script src="/js/bundle.js"></script>
