Fixed lang button display bug

--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -53,6 +53,8 @@ body {
 
     .langs_container{
         direction: rtl;
+        position: relative;
+        z-index: 2;
 
         a {
             text-decoration: none;
