Added html dimensions to img

--- a/src/partials/project_thumb.hbs
+++ b/src/partials/project_thumb.hbs
@@ -1,6 +1,6 @@
 <div class="thumbnail">
     <div class="img_container">
-        <img src="/img/{{project.img}}" data-attr-t alt-t="home.thumbAlt">
+        <img src="/img/{{project.img}}" width="950" height="450" data-attr-t alt-t="home.thumbAlt">
         <div class="overlay_container">
             <div>
                 <a href="{{project.visit}}" target="blank" {{#if (isNull project.visit)}}class="unavailable"{{/if}}>
