--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -22,7 +22,7 @@
     <div class="global-wrapper">
         {{>partials/langBtn}}
         <section id="sect_head">
-            <img src="/img/portrait.jpg" data-attr-t alt-t="home.portraitAlt">
+            <img src="/img/portrait.jpg" width="675" height="675" data-attr-t alt-t="home.portraitAlt">
             <h1><span class="tilted_bg"><span class="bg">Robin</span></span><br>Bécherraz</h1>
             <p data-t>home.catchPhrase1</p>
             <p data-t>home.catchPhrase2</p>
