--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -91,7 +91,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://github.com/robiiiiiiiiiiiin" target="blank">
+                    <a href="https://github.com/robiiiiiiiiiiiin" aria-label="Github" target="blank">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32.58 31.77">
                             <path class="cls-1"
                                 d="M16.29,0a16.29,16.29,0,0,0-5.15,31.75c.82.15,1.11-.36,1.11-.79s0-1.41,0-2.77C7.7,29.18,6.74,26,6.74,26a4.36,4.36,0,0,0-1.81-2.39c-1.47-1,.12-1,.12-1a3.43,3.43,0,0,1,2.49,1.68,3.48,3.48,0,0,0,4.74,1.36,3.46,3.46,0,0,1,1-2.18c-3.62-.41-7.42-1.81-7.42-8a6.3,6.3,0,0,1,1.67-4.37,5.94,5.94,0,0,1,.16-4.31s1.37-.44,4.48,1.67a15.41,15.41,0,0,1,8.16,0c3.11-2.11,4.47-1.67,4.47-1.67A5.91,5.91,0,0,1,25,11.07a6.3,6.3,0,0,1,1.67,4.37c0,6.26-3.81,7.63-7.44,8a3.85,3.85,0,0,1,1.11,3c0,2.18,0,3.94,0,4.47s.29.94,1.12.78A16.29,16.29,0,0,0,16.29,0Z" />
@@ -100,7 +100,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://www.linkedin.com/in/robin-b%C3%A9cherraz-926322b7/" target="blank">
+                    <a href="https://www.linkedin.com/in/robin-b%C3%A9cherraz-926322b7/" aria-label="LinkedIn" target="blank">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 61.02 61.02">
                             <path
                                 d="M30.51,0A30.51,30.51,0,1,0,61,30.51,30.51,30.51,0,0,0,30.51,0ZM22.7,45.31H16.19V24.23H22.7Zm-3.28-24a3.82,3.82,0,1,1,3.86-3.79A3.82,3.82,0,0,1,19.42,21.33Zm27.95,24H40.78V34.47a10,10,0,0,0-.29-2.67A3.16,3.16,0,0,0,39.34,30a3,3,0,0,0-1.48-.52,4.9,4.9,0,0,0-2.18.26,3.17,3.17,0,0,0-1.85,2,8.73,8.73,0,0,0-.43,3c0,3.43,0,6.87,0,10.31v.27H26.88V24.23h6.25v2.85s0,.05.06,0,.1-.07.12-.12a6.58,6.58,0,0,1,3.93-3,9.68,9.68,0,0,1,4.54-.1,6.56,6.56,0,0,1,2.8,1.21,6.29,6.29,0,0,1,2,3,13,13,0,0,1,.69,4.05c0,1.77,0,3.55,0,5.32q0,3.79,0,7.59Z" />
@@ -109,11 +109,11 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://golb.ch" target="blank">
+                    <a href="https://golb.ch" data-attr-t aria-label-t="home.myBlog" target="blank">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 61.02 61.02">
                             <path d="M47.73,31a2.37,2.37,0,0,0,1.44.43H52V26.25H49a3,3,0,0,0-1.78.46,1.93,1.93,0,0,0-.65,1.67,3.7,3.7,0,0,0,.29,1.49A2.56,2.56,0,0,0,47.73,31Z"/><path d="M28.48,26.49a4.86,4.86,0,0,0-4.75,0,4.06,4.06,0,0,0-1.56,1.82,7,7,0,0,0-.55,3,7.08,7.08,0,0,0,.55,3A4.06,4.06,0,0,0,23.73,36a4.86,4.86,0,0,0,4.75,0A4,4,0,0,0,30,34.22a7.07,7.07,0,0,0,.56-3,7,7,0,0,0-.56-3A4,4,0,0,0,28.48,26.49Z"/><path d="M48.49,33a2.77,2.77,0,0,0-1.52.4,1.57,1.57,0,0,0-.61,1.43A1.62,1.62,0,0,0,47,36.33a2.71,2.71,0,0,0,1.49.41H52V33Z"/><path d="M30.51,0A30.51,30.51,0,1,0,61,30.51,30.51,30.51,0,0,0,30.51,0ZM17.13,37.57a5.86,5.86,0,0,1-1.54.55,8.83,8.83,0,0,1-1.95.21,7.66,7.66,0,0,1-3.86-.88A5.55,5.55,0,0,1,7.48,35a8.49,8.49,0,0,1-.76-3.72,7.84,7.84,0,0,1,.84-3.71A5.91,5.91,0,0,1,10,25.08a7.71,7.71,0,0,1,3.82-.88,9.06,9.06,0,0,1,1.82.16A5.52,5.52,0,0,1,17,24.8v1.75h-.15a6.31,6.31,0,0,0-1.29-.47,6.72,6.72,0,0,0-1.75-.21A5.28,5.28,0,0,0,10,27.17a5.35,5.35,0,0,0-1.39,4.09,6.83,6.83,0,0,0,.61,3.11A4,4,0,0,0,11,36.16a5.86,5.86,0,0,0,2.68.58,5.62,5.62,0,0,0,1.1-.11l.57-.14v-5.3h1.82ZM31.72,35a5.94,5.94,0,0,1-2.21,2.49,6.26,6.26,0,0,1-3.41.89,6.27,6.27,0,0,1-3.42-.89A5.9,5.9,0,0,1,20.49,35a8.28,8.28,0,0,1-.77-3.69,8.27,8.27,0,0,1,.77-3.68,5.74,5.74,0,0,1,2.2-2.49,6.28,6.28,0,0,1,3.41-.89,6.26,6.26,0,0,1,3.41.89,5.82,5.82,0,0,1,2.21,2.49,8.4,8.4,0,0,1,.77,3.68A8.42,8.42,0,0,1,31.72,35Zm9.44,3.15H33.48V36.51h5.85V24.42h1.83Zm11.59.23H48.41a4.4,4.4,0,0,1-2.26-.51,3,3,0,0,1-1.23-1.31,3.88,3.88,0,0,1-.38-1.67,2.92,2.92,0,0,1,.66-2A3,3,0,0,1,46.61,32a3.81,3.81,0,0,1-.85-.75A4.41,4.41,0,0,1,45,29.89a5,5,0,0,1-.24-1.51,3.49,3.49,0,0,1,1.07-2.81A4.81,4.81,0,0,1,49,24.65h4.79V38.33Z"/>
                         </svg>
-                        <p>Mon blog</p>
+                        <p data-t>home.myBlog</p>
                     </a>
                 </div>
             </div>
