--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -21,14 +21,14 @@
 <body>
     <div class="global-wrapper">
         {{>partials/langBtn}}
-        <section id="sect_head">
+        <section id="sect_head" data-attr-t aria-label-t="home.sectionAbout1">
             <img src="/img/portrait.jpg" width="675" height="675" data-attr-t alt-t="home.portraitAlt">
             <h1><span class="tilted_bg"><span class="bg">Robin</span></span><br>Bécherraz</h1>
             <p data-t>home.catchPhrase1</p>
             <p data-t>home.catchPhrase2</p>
         </section>
 
-        <section id="sect_about">
+        <section id="sect_about" data-attr-t aria-label-t="home.sectionAbout2">
             <h2><span class="tilted_bg"><span class="bg" data-t>home.aboutMe</span></span></h2>
             <div class="content">
                 <h3 data-t>home.iLiveIn</h3>
@@ -44,7 +44,7 @@
             </div>
         </section>
 
-        <section id="sect_skills">
+        <section id="sect_skills" data-attr-t aria-label-t="home.sectionSkills">
             <h2><span class="tilted_bg"><span class="bg" data-t>home.skills</span></span></h2>
             <div class="content">
                 <div>
@@ -67,7 +67,7 @@
             </div>
         </section>
 
-        <section id="sect_portfolio">
+        <section id="sect_portfolio" data-attr-t aria-label-t="home.sectionPortfolio">
             <h2><span class="tilted_bg"><span class="bg">Portfolio</span></span></h2>
             <div class="content">
 
@@ -76,7 +76,7 @@
             </div>
         </section>
 
-        <section id="sect_contact">
+        <section id="sect_contact" data-attr-t aria-label-t="home.sectionContact">
             <h2><span class="tilted_bg"><span class="bg">Contact</span></span></h2>
             <div class="content">
                 <div>
