--- a/src/partials/langBtn.hbs
+++ b/src/partials/langBtn.hbs
@@ -1,5 +1,5 @@
-<div class="langs_container">
+<section class="langs_container" data-attr-t aria-label-t="home.sectionLang">
     <a data-attr-t data-attr-t-interpolate href-t="/fr/{{#unless (isNull project)}}projets/{{surroundWithCurlyBraces project.frFilename}}{{/unless}}" hreflang="fr" aria-label-t="{{surroundWithCurlyBraces "global.french"}}" class-t="lang {{surroundWithCurlyBraces "global.frIsActive"}}" data-lang="fr">FR</a>
     <span>/</span>
     <a data-attr-t data-attr-t-interpolate href-t="/en/{{#unless (isNull project)}}projects/{{surroundWithCurlyBraces project.enFilename}}{{/unless}}" hreflang="en" aria-label-t="{{surroundWithCurlyBraces "global.english"}}" class-t="lang {{surroundWithCurlyBraces "global.enIsActive"}}" data-lang="en">EN</a>
-</div>
+</section>
