Modified Golb project

--- a/src/html/projects/golb.hbs
+++ b/src/html/projects/golb.hbs
@@ -18,6 +18,7 @@
             <div class="mockups">
                 <img src="../img/golb-1.jpg" alt="GOLB screenshot" class="full-page">
                 <img src="../img/golb-2.jpg" alt="GOLB screenshot" class="full-page">
+                <img src="../img/golb-3.jpg" alt="GOLB screenshot" class="screenshot mobile">
             </div>
         </section>
     </div>
