--- a/src/html/projects/cellularautomaton.hbs
+++ b/src/html/projects/cellularautomaton.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=automaton
-    metaDesc="automaton.metaDesc"
+    metaDesc="automaton.metaDesc" titleTag="automaton.titleTag"
     }}
-    <title data-t>automaton.titleTag</title>
 </head>
 
 <body>
