--- a/src/html/projects/cookpool.hbs
+++ b/src/html/projects/cookpool.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=cookpool
-    metaDesc="cookpool.metaDesc"
+    metaDesc="cookpool.metaDesc" titleTag="cookpool.titleTag"
     }}
-    <title>My projects - Cookpool</title>
 </head>
 
 <body>
