--- a/src/html/projects/duckhuntrevenge.hbs
+++ b/src/html/projects/duckhuntrevenge.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=duckhuntrevenge
-    metaDesc="duckhuntrevenge.metaDesc"
+    metaDesc="duckhuntrevenge.metaDesc" titleTag="duckhuntrevenge.titleTag"
     }}
-    <title>My projects - Cookpool</title>
 </head>
 
 <body>
