--- a/src/html/projects/golb.hbs
+++ b/src/html/projects/golb.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=golb
-    metaDesc="golb.metaDesc"
+    metaDesc="golb.metaDesc" titleTag="golb.titleTag"
     }}
-    <title>My projects - GOLB</title>
 </head>
 
 <body>
