--- a/src/html/projects/gryonbiketest.hbs
+++ b/src/html/projects/gryonbiketest.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=gryonbiketest
-    metaDesc="gryonbiketest.metaDesc"
+    metaDesc="gryonbiketest.metaDesc" titleTag="gryonbiketest.titleTag"
     }}
-    <title data-t>gryonbiketest.titleTag</title>
 </head>
 
 <body>
