--- a/src/html/projects/myportfolio.hbs
+++ b/src/html/projects/myportfolio.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=myportfolio
-    metaDesc="myportfolio.metaDesc"
+    metaDesc="myportfolio.metaDesc" titleTag="myportfolio.titleTag"
     }}
-    <title>My projects - My Portfolio</title>
 </head>
 
 <body>
