--- a/src/html/projects/swisssolarboat.hbs
+++ b/src/html/projects/swisssolarboat.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=swisssolarboat
-    metaDesc="swisssolarboat.metaDesc"
+    metaDesc="swisssolarboat.metaDesc" titleTag="swisssolarboat.titleTag"
     }}
-    <title data-t>swisssolarboat.titleTag</title>
 </head>
 
 <body>
