--- a/src/html/projects/theapologist.hbs
+++ b/src/html/projects/theapologist.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=theapologist
-    metaDesc="theapologist.metaDesc"
+    metaDesc="theapologist.metaDesc" titleTag="theapologist.titleTag"
     }}
-    <title data-t>theapologist.titleTag</title>
 </head>
 
 <body>
