--- a/src/html/projects/lechodubois.hbs
+++ b/src/html/projects/lechodubois.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=lechodubois
-    metaDesc="lechodubois.metaDesc"
+    metaDesc="lechodubois.metaDesc" titleTag="lechodubois.titleTag"
     }}
-    <title>My projects - My Portfolio</title>
 </head>
 
 <body>
