--- a/src/html/projects/mooderize.hbs
+++ b/src/html/projects/mooderize.hbs
@@ -4,9 +4,8 @@
 <head>
     {{> partials/commonHeaders}}
     {{> partials/projectMetaTags data=data project=mooderize
-    metaDesc="mooderize.metaDesc"
+    metaDesc="mooderize.metaDesc" titleTag="mooderize.titleTag"
     }}
-    <title data-t>mooderize.titleTag</title>
 </head>
 
 <body>
