--- a/src/partials/projectMetaTags.hbs
+++ b/src/partials/projectMetaTags.hbs
@@ -1,3 +1,5 @@
+<title data-t>{{titleTag}}</title>
+
 <meta property='og:title' data-attr-t data-attr-t-interpolate content-t='{{surroundWithCurlyBraces project.title}} - {{surroundWithCurlyBraces "projects.addToMetaTitle"}}' />
 <meta property='og:image' content='https://robinbecherraz.ch/img/{{project.img}}' />
 <meta property='og:description' data-attr-t content-t='{{metaDesc}}' />
