--- a/src/partials/projects_list.hbs
+++ b/src/partials/projects_list.hbs
@@ -1,6 +1,7 @@
-{{> partials/project_thumb data=data project=cookpool}}
+{{> partials/project_thumb data=data project=bouteka}}
 {{> partials/project_thumb data=data project=golb}}
 {{> partials/project_thumb data=data project=gryonbiketest}}
+{{> partials/project_thumb data=data project=cookpool}}
 {{> partials/project_thumb data=data project=duckhuntrevenge}}
 {{> partials/project_thumb data=data project=myportfolio}}
 {{> partials/project_thumb data=data project=mooderize}}
